--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
 
   <h1>{{survey.title}}</h1>
   <h3>{{survey.instructions}}</h3>
-  <a class="btn" href="/questions/0">Start survey</a>
+  <form action="/start" method="POST">
+    <button class="btn" type="submit">Start survey</button>
+  </form>
 
 {% endblock %}
